<resources>
    <string name="app_name">Food Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu App</string>
    <string name="nav_header_subtitle">https://github.com/coderunners69/myapp.git</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login">Admin Login</string>

    <string name="menu_home">Monday</string>
    <string name="menu_gallery">Tuesday</string>
    <string name="menu_slideshow">Wednesday</string>
    <string name="menu_test">Thursday</string>
    <string name="test">Thursday</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_adder">Menu Adder</string>
    <!--<string name="lmao_ded">lmao ded</string>-->
</resources>