<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_monday"
            android:icon="@drawable/menu_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tuesday"
            android:icon="@drawable/menu_icon"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_wednesday"
            android:icon="@drawable/menu_icon"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_thursday"
            android:icon="@drawable/menu_icon"
            android:title="@string/test" />
        <item
            android:id="@+id/nav_friday"
            android:icon="@drawable/menu_icon"
            android:title="@string/friday" />
        <item
            android:id="@+id/nav_saturday"
            android:icon="@drawable/menu_icon"
            android:title="@string/saturday" />
        <item
            android:id="@+id/nav_sunday"
            android:icon="@drawable/menu_icon"
            android:title="@string/sunday" />

    </group>
</menu>