<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_monday">

    <fragment
        android:id="@+id/nav_monday"
        android:name="com.example.myapp.ui.monday.Monday"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_monday" />

    <fragment
        android:id="@+id/nav_tuesday"
        android:name="com.example.myapp.ui.tuesday.Tuesday"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_tuesday" />

    <fragment
        android:id="@+id/nav_wednesday"
        android:name="com.example.myapp.ui.wednesday.Wednesday"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_wednesday" />

    <fragment
        android:id="@+id/nav_thursday"
        android:name="com.example.myapp.ui.thursday.Thursday"
        android:label="@string/menu_test"
        tools:layout="@layout/fragment_thursday" />

    <fragment
        android:id="@+id/nav_friday"
        android:name="com.example.myapp.ui.friday.Friday"
        android:label="@string/friday"
        tools:layout="@layout/fragment_friday" />

    <fragment
        android:id="@+id/nav_saturday"
        android:name="com.example.myapp.ui.saturday.Saturday"
        android:label="@string/saturday"
        tools:layout="@layout/fragment_saturday" />

    <fragment
        android:id="@+id/nav_sunday"
        android:name="com.example.myapp.ui.sunday.Sunday"
        android:label="@string/sunday"
        tools:layout="@layout/fragment_sunday" />

</navigation>